# system

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
backend/: .env.example  Dockerfile  docker-compose.yml  pip.conf  pyproject.toml  pytest.ini  requirements.txt  run.py
backend/app/: README.md  __init__.py  errors.py  logging_config.py
backend/app/api/: __init__.py
backend/app/api/common/: __init__.py  decorators.py  responses.py  validators.py
backend/app/api/v1/: __init__.py
backend/app/config/: service_config.py
backend/app/models/: __init__.py  case.py  feedback.py  files.py  knowledge.py  notification.py  prompt.py  user.py  user_settings.py
backend/app/prompts/: __init__.py  analysis_prompt.py  base_prompt.py  vendor_prompts.py
backend/app/services/: README.md  __init__.py
backend/app/services/ai/: __init__.py  agent_nodes.py  agent_service.py  agent_state.py  agent_workflow.py  embedding_service.py  langgraph_agent_service.py  llm_service.py  log_parsing_service.py
backend/app/services/document/: __init__.py  document_service.py  idp_service.py  idp_service_new.py  idp_task_processor.py  semantic_splitter.py
backend/app/services/infrastructure/: __init__.py  task_monitor.py  task_queue.py
backend/app/services/network/: __init__.py  vendor_command_service.py
backend/app/services/retrieval/: __init__.py  hybrid_retrieval.py  knowledge_service.py  vector_service.py
backend/app/services/storage/: __init__.py  cache_service.py  local_vector_db.py  vector_db_config.py  weaviate_vector_db.py
backend/app/templates/: swagger-ui.html
backend/app/utils/: monitoring.py  response_helper.py
backend/config/: settings.py  weaviate.yaml
backend/scripts/: README.md  init_vector_db.py  manage.py
backend/scripts/database/: __init__.py
backend/scripts/demos/: README.md  __init__.py  demo_hybrid_retrieval.py
backend/scripts/deployment/: README.md  __init__.py  setup_env.py  start_weaviate.py
backend/scripts/development/: README.md  __init__.py  run_api_tests.py  run_tests.py  test_model_connection.py  test_prompts.py
backend/scripts/maintenance/: README.md  __init__.py  clean_project.py  health_check.py
backend/tests/: README.md  __init__.py  conftest.py
backend/tests/api/: README.md  conftest.py
backend/tests/api/suites/: README.md  __init__.py  test_suite.py  test_suite_runner.py
backend/tests/benchmarks/: README.md  test_performance_benchmarks.py
backend/tests/fixtures/: __init__.py
backend/tests/integration/: test_config.py  test_database.py  test_langgraph_e2e.py  test_model_integration.py  test_vector_setup.py  test_weaviate.py
backend/tests/models/: __init__.py  test_models.py
backend/tests/services/: __init__.py  test_hybrid_retrieval.py  test_hybrid_retrieval_core.py  test_knowledge.py  test_langgraph_agent.py  test_langgraph_integration.py  test_services.py  test_vector_service.py
backend/tests/unit/: test_config.py
docs/: .gitattributes  (+2 more)
(+97 files in other folders)
